feat(cache): 스냅샷 전체 복사 제거